Add: swagger.yml (more routes), change design pattern, add joi for req.body validation, config, middelwares
